add testscases for getCategories